--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="header1">
         <div class="bar">
             <h1 class="converse">converse</h1>
             <div class="logo">
@@ -72,7 +72,7 @@
             <div class="europe">
                 <h1 class="heading">Europe</h1>
                 <ul>
-                    <li>Belgium | Belgique | België</li>
+                    <li id="belgium">Belgium | Belgique | België</li>
                     <li>Denmark</li>
                     <li>Deutschland | Germany</li>
                     <li>España | Spain</li>
@@ -96,6 +96,56 @@
                     <li>China | 中国</li>
                     <li>Korea | >대한민국</li>
                 </ul>
+            </div>
+        </div>
+    </div>
+    <div class="belgium">
+        <div class="banner"></div>
+        <div class="header2">
+            <div class="hamburger">
+                <img src="./icons/icons8-hamburger-menu-24.png" alt="">
+            </div>
+            <div class="bar">
+                <h1 class="converse">converse</h1>
+                <div class="logo">
+                    <img src="./icons/icons8-star-24.png" alt="" class="star">
+                    <img src="./icons/icons8-right-arrow-32.png" alt="" class="arrow">
+                </div>
+            </div>
+            <div class="items">
+                <div>Femme</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="vectors">
+                <div class="user">
+                    <img src="./icons/icons8-user-32.png" alt="">
+                </div>
+                <div class="bag">
+                    <img src="./icons/icons8-shopping-cart-24.png" alt="">
+                </div>
+                <div class="search">
+                    <img src="./icons/icons8-search-32.png" alt="" id="search">
+                </div>
+            </div>
+        </div>
+        <div class="carasol1">
+            <img alt="Italian Icons" class="modular-tile__img can-interact opacity-up lazyloaded" data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa2c6b113/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/mobile_13/M-WE-LP-Crafted-In-Italy-P1-CT70-Trek.gif" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa2c6b113/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/mobile_13/M-WE-LP-Crafted-In-Italy-P1-CT70-Trek.gif">
+        </div>
+        <div class="carasol2">
+            <img alt="Italian Icons" class="modular-tile__img can-interact opacity-up ls-is-cached lazyloaded" data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdb92da4d/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/desktop_12/D-WE-LP-Crafted-In-Italy-P1-CT70-Trek.jpg" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdb92da4d/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/desktop_12/D-WE-LP-Crafted-In-Italy-P1-CT70-Trek.jpg">
+        </div>
+        <div class="content">
+            <h1 class="text-bold">Des modèles emblématiques à <span> l'italienne</span></h1>
+            <p class="title">Nos nouvelles Chuck&nbsp;70 arborent un style original et audacieux&nbsp;: semelles surélevées et surdimensionnées, ou encore détails en caoutchouc déstructurés.</p>
+            <div class="btn">
+                <div> Acheter la collection</div>
+                <div>Découvrir maintenant</div>
             </div>
         </div>
     </div>
