--- a/index.html
+++ b/index.html
@@ -7,51 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
-    <style>
-        @font-face {
-            font-family: 'proxima-nova';
-            src: url('https://assets.converse.com/fonts/proximanova_light_macroman/proximanova-light-webfont.woff2') format('woff2'),
-                url('https://assets.converse.com/fonts/proximanova_light_macroman/proximanova-light-webfont.woff') format('woff');
-            font-weight: 300;
-        }
-
-        @font-face {
-            font-family: 'proxima-nova';
-            src: url('https://assets.converse.com/fonts/proximanova_regular_macroman/proximanova-regular-webfont.woff2') format('woff2'),
-                url('https://assets.converse.com/fonts/proximanova_regular_macroman/proximanova-regular-webfont.woff') format('woff');
-
-            font-weight: 400;
-        }
-
-        @font-face {
-            font-family: 'proxima-nova';
-            src: url('https://assets.converse.com/fonts/proximanova_semibold_macroman/proximanova-semibold-webfont.woff2') format('woff2'),
-                url('https://assets.converse.com/fonts/proximanova_semibold_macroman/proximanova-semibold-webfont.woff') format('woff');
-
-            font-weight: 600;
-        }
-
-        @font-face {
-            font-family: 'proxima-nova';
-            src: url('https://assets.converse.com/fonts/proximanova_bold_macroman/proximanova-bold-webfont.woff2') format('woff2'),
-                url('https://assets.converse.com/fonts/proximanova_bold_macroman/proximanova-bold-webfont.woff') format('woff');
-
-            font-weight: 700;
-        }
-
-        @font-face {
-            font-family: 'proxima-nova';
-            src: url('https://assets.converse.com/fonts/proximanova_extrabold_macroman/proximanova-extrabold-webfont.woff2') format('woff2'),
-                url('https://assets.converse.com/fonts/proximanova_extrabold_macroman/proximanova-extrabold-webfont.woff') format('woff');
-
-            font-weight: 800;
-        }
-    </style>
 </head>
 
 <body>
     <div class="header1">
-        <div class="bar">
+        <div class="bar2">
             <h1 class="converse">converse</h1>
             <div class="logo">
                 <img src="./icons/icons8-star-24.png" alt="" class="star">
@@ -59,7 +19,7 @@
             </div>
         </div>
     </div>
-    <div class="country-container">
+    <div class="countryContainer">
         <div class="para">Select Country & Language</div>
         <div class="country">
             <div class="america">
@@ -105,44 +65,56 @@
             <div class="hamburger">
                 <img src="./icons/icons8-hamburger-menu-24.png" alt="">
             </div>
-            <div class="bar">
-                <h1 class="converse">converse</h1>
-                <div class="logo">
-                    <img src="./icons/icons8-star-24.png" alt="" class="star">
-                    <img src="./icons/icons8-right-arrow-32.png" alt="" class="arrow">
+            <div class="bar1">
+                <div class="bar2">
+                    <h1 class="converse">converse</h1>
+                    <div class="logo">
+                        <img src="./icons/icons8-star-24.png" alt="" class="star">
+                        <img src="./icons/icons8-right-arrow-32.png" alt="" class="arrow">
+                    </div>
                 </div>
-            </div>
-            <div class="items">
-                <div>Femme</div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="items">
+                    <div>Femme</div>
+                    <div>Man</div>
+                    <div>Child</div>
+                    <div>Customize</div>
+                    <div>Limited Edition</div>
+                    <div>Specials</div>
+                    <div>Collections</div>
+                </div>
             </div>
             <div class="vectors">
-                <div class="user">
-                    <img src="./icons/icons8-user-32.png" alt="">
-                </div>
-                <div class="bag">
+            <div class="vectors">
+                <button class="user">
+                    <img src="./icons/icons8-user-32.png" alt="" id="user">
+                </button>
+                <button class="bag">
                     <img src="./icons/icons8-shopping-cart-24.png" alt="">
-                </div>
-                <div class="search">
+                </button>
+                <button class="search1">
                     <img src="./icons/icons8-search-32.png" alt="" id="search">
-                </div>
+                </button>
+                
+            </div>
+            <button class="search2">
+                <img src="./icons/icons8-search-32 (1).png" alt="" id="search2">
+            </button>
             </div>
         </div>
         <div class="carasol1">
-            <img alt="Italian Icons" class="modular-tile__img can-interact opacity-up lazyloaded" data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa2c6b113/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/mobile_13/M-WE-LP-Crafted-In-Italy-P1-CT70-Trek.gif" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa2c6b113/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/mobile_13/M-WE-LP-Crafted-In-Italy-P1-CT70-Trek.gif">
+            <img alt="Italian Icons" class="modular-tile__img can-interact opacity-up lazyloaded"
+                data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa2c6b113/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/mobile_13/M-WE-LP-Crafted-In-Italy-P1-CT70-Trek.gif"
+                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa2c6b113/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/mobile_13/M-WE-LP-Crafted-In-Italy-P1-CT70-Trek.gif">
         </div>
         <div class="carasol2">
-            <img alt="Italian Icons" class="modular-tile__img can-interact opacity-up ls-is-cached lazyloaded" data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdb92da4d/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/desktop_12/D-WE-LP-Crafted-In-Italy-P1-CT70-Trek.jpg" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdb92da4d/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/desktop_12/D-WE-LP-Crafted-In-Italy-P1-CT70-Trek.jpg">
+            <img alt="Italian Icons" class="modular-tile__img can-interact opacity-up ls-is-cached lazyloaded"
+                data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdb92da4d/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/desktop_12/D-WE-LP-Crafted-In-Italy-P1-CT70-Trek.jpg"
+                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdb92da4d/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/desktop_12/D-WE-LP-Crafted-In-Italy-P1-CT70-Trek.jpg">
         </div>
         <div class="content">
             <h1 class="text-bold">Des modèles emblématiques à <span> l'italienne</span></h1>
-            <p class="title">Nos nouvelles Chuck&nbsp;70 arborent un style original et audacieux&nbsp;: semelles surélevées et surdimensionnées, ou encore détails en caoutchouc déstructurés.</p>
+            <p class="title">Nos nouvelles Chuck&nbsp;70 arborent un style original et audacieux&nbsp;: semelles
+                surélevées et surdimensionnées, ou encore détails en caoutchouc déstructurés.</p>
             <div class="btn">
                 <div> Acheter la collection</div>
                 <div>Découvrir maintenant</div>
