--- a/index.html
+++ b/index.html
@@ -112,12 +112,33 @@
                 src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdb92da4d/firstspirit/master/media/19_landing_pages/2022_spring_5/italy_1/desktop_12/D-WE-LP-Crafted-In-Italy-P1-CT70-Trek.jpg">
         </div>
         <div class="content">
-            <h1 class="text-bold">Des modèles emblématiques à <span> l'italienne</span></h1>
+            <h1 class="text-bold">Italian Icons</h1>
             <p class="title">Nos nouvelles Chuck&nbsp;70 arborent un style original et audacieux&nbsp;: semelles
                 surélevées et surdimensionnées, ou encore détails en caoutchouc déstructurés.</p>
             <div class="btn">
-                <div> Acheter la collection</div>
-                <div>Découvrir maintenant</div>
+                <div>Shop The Collection</div>
+                <div>Explore</div>
+            </div>
+        </div>
+        <div class="shoes-article">
+            <h1 class="ptag">Shop By Style</h1>
+            <div class="shoes">
+                <div class="s">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw9bad4363/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-High-Top-A.jpg" alt="">
+                    <p>High Tops</p>
+                </div>
+                <div class="s">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw72fbb5bc/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-LowTop-B.jpg.jpg" alt="">
+                    <P>Low Tops</P>
+                </div>
+                <div class="s">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc1397db2/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Platform-C.jpg" alt="">
+                    <p>Platforms</p>
+                </div>
+                <div class="s">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw3045f75a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Custom-D_1.jpg" alt="">
+                    <p>Boots</p>
+                </div>
             </div>
         </div>
     </div>
