Responsive webpage mobile and laptop view

--- a/index.html
+++ b/index.html
@@ -124,20 +124,33 @@
             <h1 class="ptag">Shop By Style</h1>
             <div class="shoes">
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw9bad4363/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-High-Top-A.jpg" alt="">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw9bad4363/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-High-Top-A.jpg" alt="" class="image">
                     <p>High Tops</p>
                 </div>
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw72fbb5bc/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-LowTop-B.jpg.jpg" alt="">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw72fbb5bc/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-LowTop-B.jpg.jpg" alt="" class="image">
                     <P>Low Tops</P>
                 </div>
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc1397db2/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Platform-C.jpg" alt="">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc1397db2/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Platform-C.jpg" alt="" class="image">
                     <p>Platforms</p>
                 </div>
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw3045f75a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Custom-D_1.jpg" alt="">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw3045f75a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Custom-D_1.jpg" alt="" class="image">
                     <p>Boots</p>
+                </div>
+            </div>
+        </div>
+        <div class="redboot">
+            <div class="article">
+                    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTwEvP4CwolWT9bMokbJR2UFohHUIV-KPybDT8z7UwUMIJNq_Pf" alt="" class="mobile-img">
+                <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwe6c6f055/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-03-24-22-HP-P2-Available-Now-CDG.jpg" alt="" class="laptop-img">
+            </div>
+            <div class="redboot-content">
+                <h1 class="text">Converse x COMME des GARÇONS PLAY</h1>
+                <p>Introducing the first-ever red midsole—a bold design inspired by the iconic heart-and-eyes logo. Plus, a restock of the original collaboration.</p>
+                <div class="b">
+                    <button id="btn">Shop Now</button>
                 </div>
             </div>
         </div>
