--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
                 </div>
             </div>
             <div class="vectors">
-            <div class="vectors">
-                <button class="user">
-                    <img src="./icons/icons8-user-32.png" alt="" id="user">
+                <div class="vectors">
+                    <button class="user">
+                        <img src="./icons/icons8-user-32.png" alt="" id="user">
+                    </button>
+                    <button class="bag">
+                        <img src="./icons/icons8-shopping-cart-24.png" alt="">
+                    </button>
+                    <button class="search1">
+                        <img src="./icons/icons8-search-32.png" alt="" id="search">
+                    </button>
+
+                </div>
+                <button class="search2">
+                    <img src="./icons/icons8-search-32 (1).png" alt="" id="search2">
                 </button>
-                <button class="bag">
-                    <img src="./icons/icons8-shopping-cart-24.png" alt="">
-                </button>
-                <button class="search1">
-                    <img src="./icons/icons8-search-32.png" alt="" id="search">
-                </button>
-                
-            </div>
-            <button class="search2">
-                <img src="./icons/icons8-search-32 (1).png" alt="" id="search2">
-            </button>
             </div>
         </div>
         <div class="carasol1">
@@ -124,38 +124,97 @@
             <h1 class="ptag">Shop By Style</h1>
             <div class="shoes">
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw9bad4363/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-High-Top-A.jpg" alt="" class="image">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw9bad4363/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-High-Top-A.jpg"
+                        alt="" class="image">
                     <p>High Tops</p>
                 </div>
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw72fbb5bc/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-LowTop-B.jpg.jpg" alt="" class="image">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw72fbb5bc/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-LowTop-B.jpg.jpg"
+                        alt="" class="image">
                     <P>Low Tops</P>
                 </div>
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc1397db2/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Platform-C.jpg" alt="" class="image">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc1397db2/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Platform-C.jpg"
+                        alt="" class="image">
                     <p>Platforms</p>
                 </div>
                 <div class="s">
-                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw3045f75a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Custom-D_1.jpg" alt="" class="image">
+                    <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw3045f75a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-Custom-D_1.jpg"
+                        alt="" class="image">
                     <p>Boots</p>
                 </div>
             </div>
         </div>
         <div class="redboot">
             <div class="article">
-                    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTwEvP4CwolWT9bMokbJR2UFohHUIV-KPybDT8z7UwUMIJNq_Pf" alt="" class="mobile-img">
-                <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwe6c6f055/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-03-24-22-HP-P2-Available-Now-CDG.jpg" alt="" class="laptop-img">
+                <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTwEvP4CwolWT9bMokbJR2UFohHUIV-KPybDT8z7UwUMIJNq_Pf"
+                    alt="" class="mobile-img">
+                <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwe6c6f055/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-03-24-22-HP-P2-Available-Now-CDG.jpg"
+                    alt="" class="laptop-img">
             </div>
             <div class="redboot-content">
                 <h1 class="text">Converse x COMME des GARÇONS PLAY</h1>
-                <p>Introducing the first-ever red midsole—a bold design inspired by the iconic heart-and-eyes logo. Plus, a restock of the original collaboration.</p>
+                <p>Introducing the first-ever red midsole—a bold design inspired by the iconic heart-and-eyes logo.
+                    Plus, a restock of the original collaboration.</p>
                 <div class="b">
                     <button id="btn">Shop Now</button>
                 </div>
             </div>
         </div>
+        <div class="cart1">
+            <div class="m-img1">
+                <img alt=""
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa0ae4584/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-WE-03-17-22-RENEW-STATIC.jpg">
+                <div class="l-img1">
+                    <img alt=""
+                        src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw530e319e/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-WE-03-17-22-RENEW-STATIC.jpg">
+                </div>
+                <div class="detail1">
+                    <h1>Be One With Nature</h1>
+                    <p>Find harmony with the latest Converse Renew drops-thoughtfully made with raw materials and earth-inspired pigments.</p>
+                    <button>Shop Now</button>
+                </div>
+            </div>
+        </div>
+        <div class="cart2">
+            <div class="m-img2"></div>
+            <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwee1e9b6b/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
+            <div class="l-img2">
+                <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw40d03434/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
+                <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwad6a91d5/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-3_1.jpg">
+            </div>
+            <div class="detail2">
+                <h1>Do" By You</h1>
+                <p>Customize Chucks for your big day and every event along the way. Create with leather, lace, and wedding-themed details</p>
+                <button>Shop Custom Wedding</button>
+            </div>
+        </div>
+        <div class="cart3">
+            <div class="m-img3">
+                <img alt="Black Run Star Hike" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw603470ef/firstspirit/master/media/homepage_1/2022_spring/mar_1/M-03.14.22_RSH_HP.jpg">
+            </div>
+            <div class="detail3">
+                <h1>Run Star Hike</h1>
+                <p>Two words: Fan. Favourite.
+                    The coveted Run Star Hike has been restocked for a limited time only
+                </p>
+                <button>Shop Now</button>
+            </div>
+        </div>
+        <div class="cart4">
+            <div class="m-img4">
+                <img alt="Kids Prints"  src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw74adf644/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS-1.jpg">
+            </div>
+            <div class="l-img4">
+                <img alt="KidsPrints" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dweee6a396/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS_1.jpg">
+            </div>
+            <div class="detail4">
+                <h1>Adventure Awaits</h1>
+                <p>Delight young explorers with shoes that take their imaginations through castles and coves</p>
+                <button>Shop Kids' Prints</button>
+        </div>
     </div>
-    <script src="./script.js"></script>
+        <script src="./script.js"></script>
 </body>
 
 </html>
