Responsive webpage mobile and laptop view

--- a/index.html
+++ b/index.html
@@ -165,56 +165,70 @@
             <div class="m-img1">
                 <img alt=""
                     src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa0ae4584/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-WE-03-17-22-RENEW-STATIC.jpg">
-                <div class="l-img1">
-                    <img alt=""
-                        src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw530e319e/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-WE-03-17-22-RENEW-STATIC.jpg">
-                </div>
-                <div class="detail1">
-                    <h1>Be One With Nature</h1>
-                    <p>Find harmony with the latest Converse Renew drops-thoughtfully made with raw materials and earth-inspired pigments.</p>
-                    <button>Shop Now</button>
-                </div>
             </div>
-        </div>
-        <div class="cart2">
-            <div class="m-img2"></div>
-            <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwee1e9b6b/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
-            <div class="l-img2">
-                <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw40d03434/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
-                <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwad6a91d5/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-3_1.jpg">
+            <div class="l-img1">
+                <img alt=""
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw530e319e/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-WE-03-17-22-RENEW-STATIC.jpg">
             </div>
-            <div class="detail2">
-                <h1>Do" By You</h1>
-                <p>Customize Chucks for your big day and every event along the way. Create with leather, lace, and wedding-themed details</p>
-                <button>Shop Custom Wedding</button>
-            </div>
-        </div>
-        <div class="cart3">
-            <div class="m-img3">
-                <img alt="Black Run Star Hike" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw603470ef/firstspirit/master/media/homepage_1/2022_spring/mar_1/M-03.14.22_RSH_HP.jpg">
-            </div>
-            <div class="detail3">
-                <h1>Run Star Hike</h1>
-                <p>Two words: Fan. Favourite.
-                    The coveted Run Star Hike has been restocked for a limited time only
-                </p>
+            <div class="detail1">
+                <h1>Be One With Nature</h1>
+                <p>Find harmony with the latest Converse Renew drops-thoughtfully made with raw materials and
+                    earth-inspired pigments.</p>
                 <button>Shop Now</button>
             </div>
         </div>
-        <div class="cart4">
-            <div class="m-img4">
-                <img alt="Kids Prints"  src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw74adf644/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS-1.jpg">
-            </div>
-            <div class="l-img4">
-                <img alt="KidsPrints" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dweee6a396/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS_1.jpg">
-            </div>
-            <div class="detail4">
-                <h1>Adventure Awaits</h1>
-                <p>Delight young explorers with shoes that take their imaginations through castles and coves</p>
-                <button>Shop Kids' Prints</button>
+    <div class="cart2">
+        <div class="m-img2">
+        <img alt=""
+            src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwee1e9b6b/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
+        </div>
+        <div class="l-img2">
+            <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc71a5a43/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-1_1.jpg">
+            <img alt=""
+                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw40d03434/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
+            <img alt=""
+                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwad6a91d5/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-3_1.jpg">
+        </div>
+        <div class="detail2">
+            <h1>Do" By You</h1>
+            <p>Customize Chucks for your big day and every event along the way. Create with leather, lace, and
+                wedding-themed details</p>
+            <button>Shop Custom Wedding</button>
         </div>
     </div>
-        <script src="./script.js"></script>
+     <div class="cart3">
+        <div class="m-img3">
+            <img alt="Black Run Star Hike"
+                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw603470ef/firstspirit/master/media/homepage_1/2022_spring/mar_1/M-03.14.22_RSH_HP.jpg">
+        </div>
+        <div class="l-img3">
+            <img alt="Black Run Star Hike" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwe970caa7/firstspirit/master/media/homepage_1/2022_spring/mar_1/D-03.14.22_RSH_HP.jpg">
+        </div>
+        <div class="detail3">
+            <h1>Run Star Hike</h1>
+            <p>Two words: Fan. Favourite.
+                The coveted Run Star Hike has been restocked for a limited time only
+            </p>
+            <button>Shop Now</button>
+        </div>
+    </div>
+    <div class="cart4">
+        <div class="m-img4">
+            <img alt="Kids Prints"
+                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw74adf644/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS-1.jpg">
+        </div>
+        <div class="l-img4">
+            <img alt="KidsPrints"
+                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dweee6a396/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS_1.jpg">
+        </div>
+        <div class="detail4">
+            <h1>Adventure Awaits</h1>
+            <p>Delight young explorers with shoes that take their imaginations through castles and coves</p>
+            <button>Shop Kids' Prints</button>
+        </div>
+    </div>
+</div>
+    <script src="./script.js"></script>
 </body>
 
 </html>
