Responsive webpage mobile and laptop view and landing and home page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,22 @@
         </div>
     </div>
     <div class="belgium">
-        <div class="banner"></div>
+        <div class="banner">
+            <div class="flag">
+                <img src="./icons/icons8-belgium-48.png" alt="">
+                <p>Be</p>
+                <div class="line"></div>
+                <p>En</p>
+            </div>
+            <div class="offer">
+                <button class="l-arrow"><img src="./icons/icons8-left-arrow-50.png" alt=""></button>
+                <div class="policy">
+                    <p>30 days Return Policy</p>
+                    <p>Free Delivery Above $65</p>
+                </div>
+                <button class="r-arrow"><img src="./icons/icons8-right-arrow-50.png" alt=""></button>
+            </div>
+        </div>
         <div class="header2">
             <div class="hamburger">
                 <img src="./icons/icons8-hamburger-menu-24.png" alt="">
@@ -177,57 +192,111 @@
                 <button>Shop Now</button>
             </div>
         </div>
-    <div class="cart2">
-        <div class="m-img2">
-        <img alt=""
-            src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwee1e9b6b/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
+        <div class="cart2">
+            <div class="m-img2">
+                <img alt=""
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwee1e9b6b/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
+            </div>
+            <div class="l-img2">
+                <img alt=""
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc71a5a43/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-1_1.jpg">
+                <img alt=""
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw40d03434/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
+                <img alt=""
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwad6a91d5/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-3_1.jpg">
+            </div>
+            <div class="detail2">
+                <h1>Do" By You</h1>
+                <p>Customize Chucks for your big day and every event along the way. Create with leather, lace, and
+                    wedding-themed details</p>
+                <button>Shop Custom Wedding</button>
+            </div>
         </div>
-        <div class="l-img2">
-            <img alt="" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwc71a5a43/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-1_1.jpg">
-            <img alt=""
-                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw40d03434/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-2_1.gif">
-            <img alt=""
-                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwad6a91d5/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-HP-CUSTOM-WEDDING-3_1.jpg">
+        <div class="cart3">
+            <div class="m-img3">
+                <img alt="Black Run Star Hike"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw603470ef/firstspirit/master/media/homepage_1/2022_spring/mar_1/M-03.14.22_RSH_HP.jpg">
+            </div>
+            <div class="l-img3">
+                <img alt="Black Run Star Hike"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwe970caa7/firstspirit/master/media/homepage_1/2022_spring/mar_1/D-03.14.22_RSH_HP.jpg">
+            </div>
+            <div class="detail3">
+                <h1>Run Star Hike</h1>
+                <p>Two words: Fan. Favourite.
+                    The coveted Run Star Hike has been restocked for a limited time only
+                </p>
+                <button>Shop Now</button>
+            </div>
         </div>
-        <div class="detail2">
-            <h1>Do" By You</h1>
-            <p>Customize Chucks for your big day and every event along the way. Create with leather, lace, and
-                wedding-themed details</p>
-            <button>Shop Custom Wedding</button>
+        <div class="cart4">
+            <div class="m-img4">
+                <img alt="Kids Prints"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw74adf644/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS-1.jpg">
+            </div>
+            <div class="l-img4">
+                <img alt="KidsPrints"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dweee6a396/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS_1.jpg">
+            </div>
+            <div class="detail4">
+                <h1>Adventure Awaits</h1>
+                <p>Delight young explorers with shoes that take their imaginations through castles and coves</p>
+                <button>Shop Kids' Prints</button>
+            </div>
+        </div>
+        <div class="cart5">
+            <div class="box">
+                <img alt="Shipping"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwea8c7a5b/firstspirit/be/media/homepage_1/2021_holiday_1/dec/M-Customer-Service-Image-3-Track-cropped.jpg">
+                <div class="r-box">
+                    <h3>Fast, Free Shipping</h3>
+                    <p class="short">Oders over $65 ship for free</p>
+                    <span>Learn More</span>
+                </div>
+            </div>
+            <div class="box">
+                <img alt="Returns" class="modular-tile__img opacity-up lazyloaded"
+                    data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa3b4feb9/firstspirit/be/media/homepage_1/2021_holiday_1/dec/M-Customer-Service-Image-2-Returns-cropped.jpg"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa3b4feb9/firstspirit/be/media/homepage_1/2021_holiday_1/dec/M-Customer-Service-Image-2-Returns-cropped.jpg">
+                <div class="r-box">
+                    <h3>Easy Returns</h3>
+                    <p>Not happy? Return your order within 30 days for free.</p>
+                    <span>Learn More</span>
+                </div>
+            </div>
+            <div class="box">
+                <img alt="Shipping"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwea8c7a5b/firstspirit/be/media/homepage_1/2021_holiday_1/dec/M-Customer-Service-Image-3-Track-cropped.jpg">
+                <div class="r-box">
+                    <h3>Track your package</h3>
+                    <p>Curious where your order is? check your stauts anytime.</p>
+                    <span>Learn More</span>
+                </div>
+            </div>
+        </div>
+        <div class="cart6">
+            <div class="m-img6">
+                <div class="upper1">
+                        <img alt="@desmondissick wears the Chuck 70"
+                            src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw14a38c73/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-Converse-03-03-22-WE-HP-UGC-1.jpg">
+                    <div></div>
+                </div>
+                <div class="lower1">
+                <div></div>
+                <img alt="@satoru_w0616 wears the Chuck 70" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw90ef8aad/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-Converse-03-03-22-WE-HP-UGC-2.jpg">
+                </div>
+            </div>
+            <div class="l-img6">
+                <div class="upper2"></div>
+                <div class="lower2">
+                    <div class="up-img">
+
+                    </div>
+                    <div class="low-img"></div>
+                </div>
+            </div>
         </div>
     </div>
-     <div class="cart3">
-        <div class="m-img3">
-            <img alt="Black Run Star Hike"
-                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw603470ef/firstspirit/master/media/homepage_1/2022_spring/mar_1/M-03.14.22_RSH_HP.jpg">
-        </div>
-        <div class="l-img3">
-            <img alt="Black Run Star Hike" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwe970caa7/firstspirit/master/media/homepage_1/2022_spring/mar_1/D-03.14.22_RSH_HP.jpg">
-        </div>
-        <div class="detail3">
-            <h1>Run Star Hike</h1>
-            <p>Two words: Fan. Favourite.
-                The coveted Run Star Hike has been restocked for a limited time only
-            </p>
-            <button>Shop Now</button>
-        </div>
-    </div>
-    <div class="cart4">
-        <div class="m-img4">
-            <img alt="Kids Prints"
-                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw74adf644/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS-1.jpg">
-        </div>
-        <div class="l-img4">
-            <img alt="KidsPrints"
-                src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dweee6a396/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-CONVERSE-GBL-03-03-22-KLP-ADVENTURE-PRINTS_1.jpg">
-        </div>
-        <div class="detail4">
-            <h1>Adventure Awaits</h1>
-            <p>Delight young explorers with shoes that take their imaginations through castles and coves</p>
-            <button>Shop Kids' Prints</button>
-        </div>
-    </div>
-</div>
     <script src="./script.js"></script>
 </body>
 
