Responsive webpage mobile and laptop view and landing and home page

--- a/index.html
+++ b/index.html
@@ -277,22 +277,114 @@
         <div class="cart6">
             <div class="m-img6">
                 <div class="upper1">
-                        <img alt="@desmondissick wears the Chuck 70"
-                            src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw14a38c73/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-Converse-03-03-22-WE-HP-UGC-1.jpg">
-                    <div></div>
+                    <img alt="@desmondissick wears the Chuck 70"
+                        src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw14a38c73/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-Converse-03-03-22-WE-HP-UGC-1.jpg">
+                    <div class="detail6">
+                        <span>@desmondissick</span>
+                        <p> Wears the Chuck 70</p>
+                        <div class="click">
+                            <img src="./icons/icons8-right-arrow-50.png" alt="">
+                            <h2>Shop Now</h2>
+                        </div>
+                    </div>
                 </div>
                 <div class="lower1">
-                <div></div>
-                <img alt="@satoru_w0616 wears the Chuck 70" src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw90ef8aad/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-Converse-03-03-22-WE-HP-UGC-2.jpg">
+                    <div class="detail6">
+                        <span>@satoru_w0616</span>
+                        <p>Wears the Chuck 70</p>
+                        <div class="click">
+                            <img src="./icons/icons8-right-arrow-50.png" alt="">
+                            <h2>Shop Now</h2>
+                        </div>
+                    </div>
+                    <img alt="@satoru_w0616 wears the Chuck 70"
+                        src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw90ef8aad/firstspirit/be/media/homepage_1/2022_spring/mar_1/M-Converse-03-03-22-WE-HP-UGC-2.jpg">
                 </div>
             </div>
             <div class="l-img6">
-                <div class="upper2"></div>
+                <div class="upper2">
+                    <img alt="@desmondissick"
+                        src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwdef9612a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-03-03-22-WE-HP-UGC-1.jpg">
+                </div>
                 <div class="lower2">
                     <div class="up-img">
-
+                        <img alt="Show us your style"
+                            src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa96da3b6/firstspirit/be/media/homepage_1/2022_spring/feb_3/D-Converse-02-03-22-GBL-HP-SHOW-US-YOUR-STYLE.jpg">
                     </div>
-                    <div class="low-img"></div>
+                    <div class="low-img">
+                        <img src="https://www.converse.com/dw/image/v2/AALW_PRD/on/demandware.static/-/Sites-ConverseMaster/default/dw1c6552e0/images/a_08/162058C_A_08X1.jpg?sw=406"
+                            alt="Chuck 70 Vintage Canvas Black/Black/Egret">
+                        <img alt="@satoru_w0616"
+                            class="modular-tile__img can-interact opacity-up ls-is-cached lazyloaded"
+                            data-src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa067128a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-03-03-22-WE-HP-UGC-2.jpg"
+                            src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dwa067128a/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-03-03-22-WE-HP-UGC-2.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cart7">
+            <div class="m-img7">
+                <img alt="Sign Up For Emails"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw53a073b3/firstspirit/be/media/homepage_1/2022_spring/feb_3/M-Converse-02-03-22-GBL-HP-NEVER-MISS-A-BEAT.jpg">
+            </div>
+            <div class="l-img7">
+                <img alt="Sign up for Emails"
+                    src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw2fce9dcf/firstspirit/be/media/homepage_1/2022_spring/feb_3/D-Converse-02-03-22-GBL-HP-NEVER-MISS-A-BEAT.jpg">
+            </div>
+            <div class="detail7">
+                <p>Unlock exclusive style and sales, product drops, and our latest collaborations with the Converse
+                    community—all sent straight to your inbox.</p>
+                <button>Sign Up For Emails</button>
+            </div>
+        </div>
+        <div class="cart8">
+            <div class="footer">
+                <div class="footer-top">
+                    <div class="description">
+                        <h1>NEVER MISS A BEAT</h1>
+                        <p>Sign up and receive 20% off your next purchase</p>
+                    </div>
+                    <div class="footer-signup">
+                        <div class="email">
+                            <input type="text" placeholder="Enter Email Address">
+                        </div>
+                        <div class="date-of-birth">
+                            <input type="number" placeholder="Date of Birth (DD/MM/YYYY)" id="dob">
+                        </div>
+                        <div class="gender">
+                            <select name="Gender" id="gender">
+                                <option value="Gender">Gender</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Do Not Specify">Do Not Specify</option>
+                            </select>
+                        </div>
+                        <div class="join-now">
+                            <button>Join Now</button>
+                        </div>
+                    </div>
+                    <div class="connect"></div>
+                </div>
+                <div class="footer-down">
+                    <div class="about"></div>
+                    <div class="shopping"></div>
+                    <div class="legal"></div>
+                    <div class="nike"></div>
+                </div>
+                <div class="footer-button">
+                    <select class="more">
+                        <option value="More">More</option>
+                        <option value="Converse Outlet">Converse Outlet</option>
+                        <option value="Order Status">Order Status</option>
+                        <option value="Orders / Returns">Orders / Returns</option>
+                        <option value="Shipping / Delivery">Shipping / Delivery</option>
+                        <option value="Products">Products</option>
+                        <option value="Careers">Careers</option>
+                        <option value="Our Story">Our Story</option>
+                        <option value="Terms of Use">Terms of Use</option>
+                        <option value="Shipping Chain">Shipping Chain</option>
+                        <option value="Contact Us">Contact Us</option>
+                    </select>
                 </div>
             </div>
         </div>
