Responsive webpage mobile and laptop view and landing and home page

--- a/index.html
+++ b/index.html
@@ -341,29 +341,43 @@
             <div class="footer">
                 <div class="footer-top">
                     <div class="description">
-                        <h1>NEVER MISS A BEAT</h1>
+                        <div>NEVER MISS A BEAT</div>
                         <p>Sign up and receive 20% off your next purchase</p>
                     </div>
                     <div class="footer-signup">
                         <div class="email">
-                            <input type="text" placeholder="Enter Email Address">
+                            <input type="text" placeholder="Enter Email Address" id="email">
                         </div>
                         <div class="date-of-birth">
                             <input type="number" placeholder="Date of Birth (DD/MM/YYYY)" id="dob">
                         </div>
-                        <div class="gender">
+                        <div class="gender-joinbtn">
                             <select name="Gender" id="gender">
                                 <option value="Gender">Gender</option>
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
                                 <option value="Do Not Specify">Do Not Specify</option>
                             </select>
-                        </div>
-                        <div class="join-now">
-                            <button>Join Now</button>
+                            <div class="join-now">
+                                <button>Join Now</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="connect"></div>
+                    <div class="social-media">
+                        <div>
+                            <img src="./icons/icons8-converse-shoe-company-that-primarily-produces-skating-shoes-and-lifestyle-brand-footwear-and-apparel-24.png" alt="">
+                        </div>
+                        <div class="gap"></div>
+                        <div>
+                            <img src="./icons/icons8-twitter-circled-30.png" alt="">
+                        </div>
+                        <div>
+                            <img src="./icons/icons8-facebook-30.png" alt="">
+                        </div>
+                        <div>
+                            <img src="./icons/icons8-instagram-30.png" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div class="footer-down">
                     <div class="about"></div>
